# Master-Thesis-REALDIBS

./: README.md
realdibs-gan/: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.rst  environment.yml  environment_alberto.yml  setup.cfg
realdibs-gan/doc/: Makefile  api.rst  conf.py  quick_start.rst
realdibs-gan/doc/adr/: 0001-record-architecture-decisions.md  0004-add-ci-for-documentation.md  0005-remove-absl.md  0006-ci-use-bitbucket-pipelines-for-now.md  0007-separeted-regular-and-dev-environment-yml.md  0008-repo-structure.md  0009-dataset-structure.md
realdibs-gan/examples/: plot_sine.py
realdibs-gan/morphgan/: inference_morphgan.py  make_config.py  test_gan.py  train_gan.py  train_morphgan.py
realdibs-gan/morphgan/blender/: blender_batch_render.py  blender_batch_render_get_cameras.py  blender_convert_from_fbx.py
realdibs-gan/morphgan/configs/: artgan_church_tower_epochs_10000.json  artgan_merton3_epochs_10000.json  artgan_ruemonge_animation_test.json  artgan_ruemonge_epochs_10000.json  artgan_sullens.json  artgan_sullens__epochs_30000.json  artgan_sullens_epochs_10000.json  artgan_trinity_epochs_10000.json  config_to_gen_dataset.json  cyclegan_church_tower_epochs_10000.json  cyclegan_merton3_epochs_10000.json  cyclegan_ruemonge_animation_test.json  cyclegan_ruemonge_epochs_10000.json  cyclegan_sullens.json  cyclegan_sullens__epochs_10000.json  cyclegan_sullens_epochs_10000.json  cyclegan_sullens_epochs_10000_test.json  cyclegan_trinity_epochs_10000.json  merton3.json  sullens.json  (+9 more)
realdibs-gan/tests/: test_combo.py  test_main.py
(+110 files in other folders)
