[metadata]
description-file = README.rst

[aliases]
test = pytest

[tool:pytest]
junit_family = xunit2
testpaths = tests
addopts =
    --doctest-modules --doctest-ignore-import-errors
    --junit-xml=junit-results.xml
    --cov=noice --cov-report xml:coverage.xml
    --ignore=examples --ignore=tutorials

[flake8]
exclude = *externals*,constants.py,fixes.py
max-line-length = 88
extend-ignore = E203

[pydocstyle]
convention = pep257
match_dir = ^(?!\.|externals|doc|tutorials|examples).*$
match = (?!tests/__init__\.py|fixes).*\.py
add-ignore = D100,D104,D107,D413
add-select = D214,D215,D404,D405,D406,D407,D408,D409,D410,D411
ignore-decorators = ^(copy_.*_doc_to_|on_trait_change|cached_property|deprecated|property|.*setter).*
